// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="date"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="date_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="date_date"
            list={null}
            maxLength={null}
            name="date_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="time"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="time_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="time_time"
            list={null}
            maxLength={null}
            name="time_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="datetime"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date-Time Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
            id="datetime_date_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 hrazvq"
              cols=""
              disabled={false}
              id="datetime_date"
              list={null}
              maxLength={null}
              name="datetime_date"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="date"
              value={null}
            />
          </section>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
            id="datetime_time_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 hrazvq"
              cols=""
              disabled={false}
              id="datetime_time"
              list={null}
              maxLength={null}
              name="datetime_time"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="time"
              value={null}
            />
          </section>
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
  </form>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
    id="knobs"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
      fontSize="0.82em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Input Label
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
      id="knobs_date_container"
      rows={null}
    >
      <input
        autoComplete="off"
        className="TextInput__Input-sc-1fep8p8-1 hrazvq"
        cols=""
        disabled={false}
        id="knobs_date"
        list={null}
        maxLength={null}
        name="knobs_date"
        onBlur={[Function]}
        onChange={null}
        onFocus={[Function]}
        onKeyPress={null}
        pattern={null}
        placeholder={null}
        rows=""
        size={null}
        title={null}
        type="date"
        value={null}
      />
    </section>
    <p
      className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
      fontSize="0.65em"
      fontWeight={400}
      letterSpacing="0.6px"
    >
      Hang in there, buddy, I&#39;m here to help!
    </p>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="dateLabel"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="dateLabel_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="dateLabel_date"
            list={null}
            maxLength={null}
            name="dateLabel_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="dateRequired"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 hUZhUB"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label (required)
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="dateRequired_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="dateRequired_date"
            list={null}
            maxLength={null}
            name="dateRequired_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 jsSakp"
        id="dateDisabled"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
          id="dateDisabled_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 sNkdI"
            cols=""
            disabled={true}
            id="dateDisabled_date"
            list={null}
            maxLength={null}
            name="dateDisabled_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 fKHSaP"
        id="dateError"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
          id="dateError_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 gZOQGf"
            cols=""
            disabled={false}
            id="dateError_date"
            list={null}
            maxLength={null}
            name="dateError_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Don't sweat it...we can fix this!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 piVAY"
        id="dateWarning"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iXGLyq"
          id="dateWarning_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 bxvUUn"
            cols=""
            disabled={false}
            id="dateWarning_date"
            list={null}
            maxLength={null}
            name="dateWarning_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          WARNING!
        </p>
      </section>
    </section>
  </form>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="timeLabel"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="timeLabel_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="timeLabel_time"
            list={null}
            maxLength={null}
            name="timeLabel_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="timeRequired"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 hUZhUB"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label (required)
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="timeRequired_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="timeRequired_time"
            list={null}
            maxLength={null}
            name="timeRequired_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 jsSakp"
        id="timeDisabled"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
          id="timeDisabled_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 sNkdI"
            cols=""
            disabled={true}
            id="timeDisabled_time"
            list={null}
            maxLength={null}
            name="timeDisabled_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 fKHSaP"
        id="timeError"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Time Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
          id="timeError_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 gZOQGf"
            cols=""
            disabled={false}
            id="timeError_time"
            list={null}
            maxLength={null}
            name="timeError_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Don't sweat it...we can fix this!
        </p>
      </section>
    </section>
  </form>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="dateTimeLabel"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date-Time Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
            id="dateTimeLabel_date_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 hrazvq"
              cols=""
              disabled={false}
              id="dateTimeLabel_date"
              list={null}
              maxLength={null}
              name="dateTimeLabel_date"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="date"
              value={null}
            />
          </section>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
            id="dateTimeLabel_time_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 hrazvq"
              cols=""
              disabled={false}
              id="dateTimeLabel_time"
              list={null}
              maxLength={null}
              name="dateTimeLabel_time"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="time"
              value={null}
            />
          </section>
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
        id="dateTimeRequired"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 hUZhUB"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date-Time Input Label (required)
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
            id="dateTimeRequired_date_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 hrazvq"
              cols=""
              disabled={false}
              id="dateTimeRequired_date"
              list={null}
              maxLength={null}
              name="dateTimeRequired_date"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="date"
              value={null}
            />
          </section>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
            id="dateTimeRequired_time_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 hrazvq"
              cols=""
              disabled={false}
              id="dateTimeRequired_time"
              list={null}
              maxLength={null}
              name="dateTimeRequired_time"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="time"
              value={null}
            />
          </section>
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 jsSakp"
        id="dateTimeDisabled"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date-Time Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
            id="dateTimeDisabled_date_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 sNkdI"
              cols=""
              disabled={true}
              id="dateTimeDisabled_date"
              list={null}
              maxLength={null}
              name="dateTimeDisabled_date"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="date"
              value={null}
            />
          </section>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
            id="dateTimeDisabled_time_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 sNkdI"
              cols=""
              disabled={true}
              id="dateTimeDisabled_time"
              list={null}
              maxLength={null}
              name="dateTimeDisabled_time"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="time"
              value={null}
            />
          </section>
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 fKHSaP"
        id="dateTimeError"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
          fontSize="0.82em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Date-Time Input Label
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
            id="dateTimeError_date_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 gZOQGf"
              cols=""
              disabled={false}
              id="dateTimeError_date"
              list={null}
              maxLength={null}
              name="dateTimeError_date"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="date"
              value={null}
            />
          </section>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
            id="dateTimeError_time_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-1 gZOQGf"
              cols=""
              disabled={false}
              id="dateTimeError_time"
              list={null}
              maxLength={null}
              name="dateTimeError_time"
              onBlur={[Function]}
              onChange={null}
              onFocus={[Function]}
              onKeyPress={null}
              pattern={null}
              placeholder={null}
              rows=""
              size={null}
              title={null}
              type="time"
              value={null}
            />
          </section>
        </section>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
          fontSize="0.65em"
          fontWeight={400}
          letterSpacing="0.6px"
        >
          Don't sweat it...we can fix this!
        </p>
      </section>
    </section>
  </form>
</div>
`;

exports[` 6`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="date"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
        id="date_date_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 hrazvq"
          cols=""
          disabled={false}
          id="date_date"
          list={null}
          maxLength={null}
          name="date_date"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="date"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="time"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Time Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
        id="time_time_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 hrazvq"
          cols=""
          disabled={false}
          id="time_time"
          list={null}
          maxLength={null}
          name="time_time"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="time"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="datetime"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date-Time Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="datetime_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="datetime_date"
            list={null}
            maxLength={null}
            name="datetime_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="datetime_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="datetime_time"
            list={null}
            maxLength={null}
            name="datetime_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
  </section>
</form>
`;

exports[` 7`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateDefault"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
        id="dateDefault_date_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 hrazvq"
          cols=""
          disabled={false}
          id="dateDefault_date"
          list={null}
          maxLength={null}
          name="dateDefault_date"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="date"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateRequired"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hUZhUB"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date Input Label (required)
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
        id="dateRequired_date_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 hrazvq"
          cols=""
          disabled={false}
          id="dateRequired_date"
          list={null}
          maxLength={null}
          name="dateRequired_date"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="date"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 jsSakp"
      id="dateDisabled"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
        id="dateDisabled_date_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 sNkdI"
          cols=""
          disabled={true}
          id="dateDisabled_date"
          list={null}
          maxLength={null}
          name="dateDisabled_date"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="date"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 fKHSaP"
      id="dateError"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
        id="dateError_date_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 gZOQGf"
          cols=""
          disabled={false}
          id="dateError_date"
          list={null}
          maxLength={null}
          name="dateError_date"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="date"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Don't sweat it...we can fix this!
      </p>
    </section>
  </section>
</form>
`;

exports[` 8`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="timeDefault"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Time Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
        id="timeDefault_time_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 hrazvq"
          cols=""
          disabled={false}
          id="timeDefault_time"
          list={null}
          maxLength={null}
          name="timeDefault_time"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="time"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="timeRequired"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hUZhUB"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Time Input Label (required)
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
        id="timeRequired_time_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 hrazvq"
          cols=""
          disabled={false}
          id="timeRequired_time"
          list={null}
          maxLength={null}
          name="timeRequired_time"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="time"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 jsSakp"
      id="timeDisabled"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Time Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
        id="timeDisabled_time_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 sNkdI"
          cols=""
          disabled={true}
          id="timeDisabled_time"
          list={null}
          maxLength={null}
          name="timeDisabled_time"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="time"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 fKHSaP"
      id="timeError"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Time Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
        id="timeError_time_container"
        rows={null}
      >
        <input
          autoComplete="off"
          className="TextInput__Input-sc-1fep8p8-1 gZOQGf"
          cols=""
          disabled={false}
          id="timeError_time"
          list={null}
          maxLength={null}
          name="timeError_time"
          onBlur={[Function]}
          onChange={null}
          onFocus={[Function]}
          onKeyPress={null}
          pattern={null}
          placeholder={null}
          rows=""
          size={null}
          title={null}
          type="time"
          value={null}
        />
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Don't sweat it...we can fix this!
      </p>
    </section>
  </section>
</form>
`;

exports[` 9`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="datetimeDefault"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date-Time Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="datetimeDefault_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="datetimeDefault_date"
            list={null}
            maxLength={null}
            name="datetimeDefault_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="datetimeDefault_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="datetimeDefault_time"
            list={null}
            maxLength={null}
            name="datetimeDefault_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 gchRuS"
      id="dateTimeRequired"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hUZhUB"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date-Time Input Label (required)
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="dateTimeRequired_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="dateTimeRequired_date"
            list={null}
            maxLength={null}
            name="dateTimeRequired_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 iFWYVo"
          id="dateTimeRequired_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 hrazvq"
            cols=""
            disabled={false}
            id="dateTimeRequired_time"
            list={null}
            maxLength={null}
            name="dateTimeRequired_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 jsSakp"
      id="datetimeDisabled"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date-Time Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
          id="datetimeDisabled_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 sNkdI"
            cols=""
            disabled={true}
            id="datetimeDisabled_date"
            list={null}
            maxLength={null}
            name="datetimeDisabled_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
          id="datetimeDisabled_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 sNkdI"
            cols=""
            disabled={true}
            id="datetimeDisabled_time"
            list={null}
            maxLength={null}
            name="datetimeDisabled_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm Calendar__CalendarContainer-sbbnzq-0 fKHSaP"
      id="dateTimeError"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 ewWNOz"
        fontSize="0.82em"
        fontWeight={400}
        htmlFor={null}
        letterSpacing="0px"
      >
        Date-Time Input Label
      </label>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
          id="dateTimeError_date_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 gZOQGf"
            cols=""
            disabled={false}
            id="dateTimeError_date"
            list={null}
            maxLength={null}
            name="dateTimeError_date"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="date"
            value={null}
          />
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 coEWAm TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
          id="dateTimeError_time_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-1 gZOQGf"
            cols=""
            disabled={false}
            id="dateTimeError_time"
            list={null}
            maxLength={null}
            name="dateTimeError_time"
            onBlur={[Function]}
            onChange={null}
            onFocus={[Function]}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            size={null}
            title={null}
            type="time"
            value={null}
          />
        </section>
      </section>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Hang in there, buddy, I'm here to help!
      </p>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
        fontSize="0.65em"
        fontWeight={400}
        letterSpacing="0.6px"
      >
        Don't sweat it...we can fix this!
      </p>
    </section>
  </section>
</form>
`;
